@@ -2,6 +2,10 @@ Revision history for Hash-Objectify
 
 {{$NEXT}}
 
+    [Bug fixes]
+
+    - Make can() return undef for a missing method, even in list context.
+
 0.004     2016-09-12 19:12:15-04:00 America/New_York
 
     [Bug fixes]
